--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -20,24 +20,24 @@
     <color name="offwhite">#e9e8e8</color>
     <color name="author_grey">#808184</color>
 
-    <color name="primary">#0288d1</color>
-    <color name="primary_dark">#0277bd</color>
-    <color name="accent">#0091ea</color>
+    <color name="primary">@*android:color/material_deep_teal_500</color>
+    <color name="primary_dark">@*android:color/material_deep_teal_500</color>
+    <color name="accent">@*android:color/material_deep_teal_500</color>
     <color name="actionbar_text_color">#fff</color>
     <color name="primary_text_color">#000</color>
 
     <color name="apply_button_text_color_enabled">#ffffff</color>
     <color name="apply_button_text_color_disabled">#bbbbbb</color>
 
-    <color name="apply_button_progress_color">#6bd1e9</color>
-    <color name="apply_button_default_color">#00b1e5</color>
-    <color name="apply_button_pressed_color">#008ef2</color>
+    <color name="apply_button_progress_color">#455A64</color>
+    <color name="apply_button_default_color">#263238</color>
+    <color name="apply_button_pressed_color">#37474F</color>
 
     <color name="designed_for_color">#ff8888</color>
 
     <!-- Drawer -->
     <color name="drawer_item_textcolor">#fff</color>
-    <color name="drawer_item_default">#0288d1</color>
-    <color name="drawer_item_pressed">#4FC3F7</color>
+    <color name="drawer_item_default">@*android:color/material_deep_teal_500</color>
+    <color name="drawer_item_pressed">#37474F</color>
     <color name="drawer_divider_line">#ffffff</color>
 </resources>
